# f4py

./: .gitignore  README.md  push  push.sh  requirements.txt  setup.cfg  update_version.py
src/: setup.cfg
src/docs/: conf.py  index.rst
src/docs/_build/doctrees/: environment.pickle  index.doctree
src/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
src/docs/_build/html/_sources/: index.rst.txt
src/f4/: Builder.py  Filters.py  IndexBuilder.py  IndexSearcher.py  Parser.py  Transformer.py  Utilities.py  __init__.py
test/: .dockerignore  .gitignore  Dockerfile  TODO  build_tsv.py  build_tsv_utf8.py  profile.html  profile.json  run.sh  test.py  test.sh
test/data/: small.f4  small.f4.cc  small.f4.cn  small.f4.cn.cc  small.f4.ct
