[metadata]
name = f4
version = 0.1.0
author = Stephen R. Piccolo
author_email = stephen.piccolo.byu@gmail.com
description = A Python package for the Fast Fixed-width File Format (F4)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/srp33/f4py
project_urls =
    Docs = https://f4py.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
